David Rowlands (14 April 2002)
------------------------------
Score now includes IGB balances including loans
The "You have not completed your last move" bug should now be fixed
Added code from Ron to stop people putting HTML etc in messages (bugs 542541 and 543386)
Bounty system will no longer pay out on Federation bounties
You now get towed from sectors if your average tech level is greater than max hull size
Added code to limit credits on a planet without a base to a configurable amount. 
Fixed starvation log message - was logging fractional people (bug 536132)
Fixed incorrect message on bounties (bug 542401)



David Rowlands (25 March 2002)
---------------
Space plague not logging percentage lost correctly.
Decreased the chance of the apocalypse events occuring.
Added code to give people the option to run without cron.
Improved the efficiency of some scheduler tasks.
Fixed infinite loop bug when renaming teams.
Fixed mail compliance problem (was only sending \n when it should be \r\n)

Ron Harwood ( 12 March 2002) -- Oh my god! He touched some code! :-)
--------------
Added onscreen message on how to retrieve lost password

David Rowlands ( 6 March 2002)
--------------
Fixed corporate planet exploit.


Version 0.3.5 Released (5 March 2002)
----------------------
Richard Gowen (14 Febuary 2002)
-------------------------------
Furangee can attack sector defenses
Furangee can attack players on planets

Nospoon (8 February 2002)
-------------------------
Merged Wanders new create universe script
Fixed number of torps firing to be 10%
Ships on planets now fire the correct amount of torps
Fixed exploits in teams
Genesis device can destroy planets again


Nospoon (24 January 2002)
-------------------------
Added bounty System
Added multi run traderoutes
Added planetary apocalypse
Update FAQ

Version 0.3.1 released (5 January 2002)
-------------

SharpBlue (4 January 2002)
---------------------------
Finished language selection code