@@ -7,6 +7,7 @@ updatecookie();
 include("languages/$lang");
 
 
+
 $title=$l_warp_title;
 include("header.php");
 
@@ -19,6 +20,9 @@ if(checklogin())
 
 $result = $db->Execute("SELECT * FROM $dbtables[ships] WHERE email='$username'");
 $playerinfo=$result->fields;
+
+$result4 = $db->Execute("SELECT * FROM $dbtables[universe] WHERE sector_id='$playerinfo[sector]'");
+$sectorinfo=$result4->fields;
 
 bigtitle();
 
@@ -38,7 +42,7 @@ if($playerinfo[dev_warpedit] < 1)
   die();
 }
 
-$res = $db->Execute("SELECT allow_warpedit,$dbtables[universe].zone_id FROM $dbtables[zones],$dbtables[universe] WHERE sector_id=$playerinfo[sector] AND $dbtables[universe].zone_id=$dbtables[zones].zone_id");
+$res = $db->Execute("SELECT allow_warpedit FROM $dbtables[zones] WHERE zone_id='$sectorinfo[zone_id]'");
 $zoneinfo = $res->fields;
 if($zoneinfo[allow_warpedit] == 'N')
 {
@@ -46,6 +50,26 @@ if($zoneinfo[allow_warpedit] == 'N')
   TEXT_GOTOMAIN();
   include("footer.php");
   die();
+}
+
+if($zoneinfo[allow_warpedit] == 'L')
+{
+  $result3 = $db->Execute("SELECT * FROM $dbtables[zones] WHERE zone_id='$sectorinfo[zone_id]'");
+  $zoneowner_info = $result3->fields;
+
+  $result5 = $db->Execute("SELECT team FROM $dbtables[ships] WHERE ship_id='$zoneowner_info[owner]'");
+  $zoneteam = $result5->fields;
+
+  if($zoneowner_info[owner] != $playerinfo[ship_id])
+  {
+    if(($zoneteam[team] != $playerinfo[team]) || ($playerinfo[team] == 0))
+    {
+      echo "$l_warp_forbid<BR><BR>";
+      TEXT_GOTOMAIN();
+      include("footer.php");
+      die();
+    }
+  }
 }
 
 $result2 = $db->Execute("SELECT * FROM $dbtables[links] WHERE link_start=$playerinfo[sector] ORDER BY link_dest ASC");
@@ -59,6 +83,7 @@ else
   while(!$result2->EOF)
   {
     echo $result2->fields[link_dest] . " ";
+
     $result2->MoveNext();
   }
   echo "<BR><BR>";
