@@ -1,3 +1,7 @@
+David Rowlands (25 April 2002)
+------------------------------
+Added Timeraiders patch to allow teams to deploy beacons etc.
+
 David Rowlands (14 April 2002)
 ------------------------------
 Score now includes IGB balances including loans
